tests/grammar/valid/core-precedence-01.vit
proc main() -> int {
  let a = 1 + 2 * 3
  let b = (1 + 2) * 3
  let c = a > b and false or true
  let d = c == true
  if d {
    give 0
  }
  give 1
}

