tests/grammar/invalid/core-recovery-top-level-sync-01.vit
const ok = 1
let broken = 2
proc main() -> int {
  give ok
}
